# llm-useful

./: .gitignore  BeamSearch.ipynb  ChainOfThought.ipynb  Diffusion_models.ipynb  Elo_rating_system.ipynb  Evaluation_techniques.ipynb  FlashAttention_implementation.ipynb  Layer_vs_batch_norm.ipynb  README.md  Synthetic_Techniques.ipynb  Tokenization.ipynb  elo_ratings.csv  few_shot_templates.md  lora_forwardPass.ipynb  sample.txt
RAG_project/: rag_small.ipynb
bridgit_matching_proto_v2/: README.md  requirements.txt  run_prototype.py
bridgit_matching_proto_v2/data/: profiles.tsv  sampleData_Bridgit.tsv  sample_profiles.tsv
bridgit_matching_proto_v2/matchlib/: scoring.py
bridgit_matching_starter/: README.md  requirements.txt
bridgit_matching_starter/src/: llm.py  main.py  mmr.py  models.py  prompt.py  safety.py
bridgit_matching_starter_v2/: README.md  requirements.txt
bridgit_matching_starter_v2/src/: ab.py  llm.py  main.py  mmr.py  models.py  safety.py
bridgit_matching_starter_v2/tests/: test_safety.py
bridgit_rag_baseline/: README.md  sample_input.json
bridgit_rag_baseline/data/: demos.json
bridgit_rag_baseline/src/: llm.py  main.py  prompt.py  retriever.py  safety.py  schemas.py
bridgit_rag_baseline/tests/: test_demo_runner.py
notebooks/: README.md
projects/: README.md
projects/bridgit-matching-engine/: README.md  (+1 more)
rag/: pyproject.toml  requirements.txt
rag/data/excel/: relavant_jobs.xlsx
rag/notebook/: Document.ipynb  pdf_loader.ipynb
resources/: README.md
tokenizer_model/: merges.txt
vDB/: requirements.txt  semantic_search.ipynb
(+24 files in other folders)
