[project]
name = "rag"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "ipykernel>=7.1.0",
    "langchain>=1.0.6",
    "langchain-community>=0.4.1",
    "langchain-core>=1.0.5",
    "pymupdf>=1.26.6",
    "pypdf>=6.2.0",
]
